tests/ui/type-alias-impl-trait/define_opaques_attr/invalid-extern-fn-body.stderr
error: incorrect function inside `extern` block
  --> $DIR/invalid-extern-fn-body.rs:4:8
   |
LL |   extern "C" {
   |   ---------- `extern` blocks define existing foreign functions and functions inside of them cannot have a body
LL |       fn a() {
   |  ________^___-
   | |        |
   | |        cannot have a body
LL | |
LL | |         #[define_opaque(String)]
LL | |         fn c() {}
LL | |     }
   | |_____- help: remove the invalid body: `;`
   |
   = help: you might have meant to write a function accessible through FFI, which can be done by writing `extern fn` outside of the `extern` block
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html

error: aborting due to 1 previous error

