tests/ui/type-alias-impl-trait/define_opaques_attr/invalid-extern-fn-body.rs
#![feature(type_alias_impl_trait)]

extern "C" {
    fn a() {
        //~^ ERROR incorrect function inside `extern` block
        #[define_opaque(String)]
        fn c() {}
    }
}

pub fn main() {}
